utopia-project/force-app/main/default/objects/Product_Region__mdt/Product_Region__mdt.object-meta.xml
<CustomObject>
    <label>Product Region</label>
    <pluralLabel>Product Regions</pluralLabel>
</CustomObject>