utopia-project/force-app/main/default/objects/Product_Region__mdt/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>