utopia-project/force-app/main/default/objects/Product_Region__mdt/fields/Caveat__c.field-meta.xml
<CustomField>
    <fullName>Caveat__c</fullName>
    <label>Caveat</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>