utopia-project/force-app/main/default/objects/Product_Region__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>MARKETING_CLOUD</fullName>
            </value>
            <value>
                <fullName>DATA_CLOUD</fullName>
            </value>
            <value>
                <fullName>MULESOFT</fullName>
            </value>
            <value>
                <fullName>TABLEAU</fullName>
            </value>
            <value>
                <fullName>SLACK</fullName>
            </value>
            <value>
                <fullName>GOVCLOUD</fullName>
            </value>
            <value>
                <fullName>AGENTFORCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>